fixes hero button alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,8 @@ h6 {
 /* Download Buttons */
 
 .download {
+  /* margin-top: 1rem;
+  margin-right: 1.5rem; */
   margin: 0.5rem 0.75rem;
 }
 
@@ -239,6 +241,10 @@ button > i {
 
   .big-heading {
     font-size: 3.5rem;
+  }
+
+  .download {
+    margin: 0.5rem 1.5rem 0 0;
   }
 
   .title-image {
